--- a/app/src/main/res/layout/content_detalhes.xml
+++ b/app/src/main/res/layout/content_detalhes.xml
@@ -81,19 +81,19 @@
                         android:text=""
                         android:textColor="@color/branco"
                         android:textSize="17sp" />
-
+                    
                 </LinearLayout>
 
             </LinearLayout>
         </LinearLayout>
 
-        <RelativeLayout
+
+        <LinearLayout
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:weightSum="1">
-
 
 
             <RelativeLayout
@@ -104,7 +104,17 @@
                 android:paddingRight="4dp"
                 android:paddingTop="5dp">
 
-                <android.support.design.widget.FloatingActionButton
+                
+
+                <ExpandableListView
+                    android:id="@+id/listView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentBottom="false"
+                    android:layout_alignParentRight="false"
+                    android:layout_weight="0.8" />
+
+                    <android.support.design.widget.FloatingActionButton
                     android:id="@+id/insertMessage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -118,17 +128,12 @@
                     android:paddingRight="20dp"
                     android:paddingBottom="4dp"
                     app:backgroundTint="@color/blue"
-                    app:srcCompat="@android:drawable/ic_menu_edit" />
+                        app:srcCompat="@android:drawable/ic_menu_edit" />
 
-                <ExpandableListView
-                    android:id="@+id/listView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.8" />
             </RelativeLayout>
 
 
-        </RelativeLayout>
+        </LinearLayout>
 
     </LinearLayout>
 
