--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,24 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:paddingBottom="3dp"
     android:paddingTop="2dp">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/ivPerfil"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            app:civ_border_color="@color/branco"
-            app:civ_border_width="2dp"
-            app:srcCompat="@mipmap/ic_user" />
-
-    </RelativeLayout>
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/ivPerfil"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center_vertical"
+        app:civ_border_color="@color/branco"
+        app:civ_border_width="2dp"
+        app:srcCompat="@mipmap/ic_user" />
 
     <LinearLayout
         android:layout_width="match_parent"
