--- a/app/src/main/res/layout/insert_answer.xml
+++ b/app/src/main/res/layout/insert_answer.xml
@@ -21,6 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:textColor="@color/branco"
         android:hint="@string/nome"
         android:inputType="textPersonName"
         android:textColorLink="@color/blue" />
