--- a/app/src/main/res/layout/update_message.xml
+++ b/app/src/main/res/layout/update_message.xml
@@ -1,7 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+   android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/gradient_color"
+    android:orientation="vertical"
+    android:padding="15dp">
+
+     <TextView
+        android:id="@+id/textView0"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:text="Atualizar Mensagem"
+        android:textColor="@color/branco"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <EditText
         android:layout_width="match_parent"
@@ -9,6 +22,7 @@
         android:inputType="textPersonName"
         android:ems="10"
         android:id="@+id/textUpdateMessage"
+        android:textColor="@color/branco"
         android:hint="@string/nome"
         android:textColorLink="@color/blue" />
 
